# mp3-parser

./: CMakeLists.txt
lib/: BasicFrame.cpp  BasicFrame.h  CMakeLists.txt  COMRFrame.cpp  COMRFrame.h  ENCRFrame.cpp  ENCRFrame.h  EQU2Frame.cpp  EQU2Frame.h  ETCOFrame.cpp  ETCOFrame.h  FrameHeader.cpp  FrameHeader.h  GRIDFrame.cpp  GRIDFrame.h  ID3v2HeadFooter.cpp  ID3v2HeadFooter.h  OWNEFrame.cpp  OWNEFrame.h  PCNTFrame.cpp  PCNTFrame.h  POPMFrame.cpp  POPMFrame.h  POSSFrame.cpp  POSSFrame.h  RBUFFrame.cpp  RBUFFrame.h  RVA2Frame.cpp  RVA2Frame.h  SEEKFrame.cpp  SEEKFrame.h  SYLTFrame.cpp  SYLTFrame.h  SkippedFrame.cpp  SkippedFrame.h  TIPLnTMCLFrame.cpp  TIPLnTMCLFrame.h  TextCommentFrame.cpp  TextCommentFrame.h  TextFrame.cpp  (+11 more)
