add_library(frames includes.cpp ID3v2HeadFooter.cpp FrameHeader.cpp BasicFrame.cpp UFIDnPRIVFrame.cpp TextFrame.cpp TextCommentFrame.cpp POPMFrame.cpp WebFrame.cpp SkippedFrame.cpp UserTextFrame.cpp ETCOFrame.cpp SYLTFrame.cpp RVA2Frame.cpp EQU2Frame.cpp PCNTFrame.cpp POSSFrame.cpp USERFrame.cpp OWNEFrame.cpp GRIDFrame.cpp TIPLnTMCLFrame.cpp SEEKFrame.cpp ENCRFrame.cpp RBUFFrame.cpp COMRFrame.cpp)
